--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'javax.inject:javax.inject:1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.1'
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.12.1'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.1'
+	
+    
 }
 
 test {
